--- a/src/assets/styles/typography.css
+++ b/src/assets/styles/typography.css
@@ -1,17 +1,17 @@
-.title {
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 32px;
-}
+/*.title {*/
+/*    font-size: 24px;*/
+/*    font-weight: 700;*/
+/*    line-height: 32px;*/
+/*}*/
 
-.paragraph16_regular {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-}
+/*.paragraph16_regular {*/
+/*    font-size: 16px;*/
+/*    font-weight: 400;*/
+/*    line-height: 24px;*/
+/*}*/
 
-.paragraph14_regular {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-}
+/*.paragraph14_regular {*/
+/*    font-size: 14px;*/
+/*    font-weight: 400;*/
+/*    line-height: 20px;*/
+/*}*/
